--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
 - name: markdown lint
   commands:
   - markdownlint *.md
-  image: docker.io/volkerraschek/markdownlint:0.33.0
+  image: git.cryptic.systems/volker.raschek/markdownlint:0.33.0
   resources:
     limits:
       cpu: 150
@@ -40,7 +40,7 @@ steps:
       from_secret: smtp_username
     SMTP_PASSWORD:
       from_secret: smtp_password
-  image: docker.io/volkerraschek/drone-email:0.1.1
+  image: git.cryptic.systems/volker.raschek/drone-email:0.1.1
   resources:
     limits:
       cpu: 150
@@ -159,7 +159,7 @@ steps:
       from_secret: smtp_username
     SMTP_PASSWORD:
       from_secret: smtp_password
-  image: docker.io/volkerraschek/drone-email:0.1.1
+  image: git.cryptic.systems/volker.raschek/drone-email:0.1.1
   resources:
     limits:
       cpu: 150
