--- a/.drone.yml
+++ b/.drone.yml
@@ -89,7 +89,7 @@ trigger:
 
 ---
 kind: pipeline
-type: kubernetes
+type: docker
 name: unit-test-arm64
 
 clone:
@@ -98,8 +98,12 @@ clone:
 depends_on:
 - linter
 
-node_selector:
-  kubernetes.io/arch: arm64
+# node_selector:
+#   kubernetes.io/arch: arm64
+
+platform:
+  os: linux
+  arch: arm64
 
 steps:
 - name: clone
@@ -109,10 +113,10 @@ steps:
   commands:
   - go test -v ./...
   image: docker.io/library/golang:1.20.0
-  resources:
-    limits:
-      cpu: 250
-      memory: 500M
+  # resources:
+  #   limits:
+  #     cpu: 250
+  #     memory: 500M
 
 trigger:
   event:
