--- a/renovate.json
+++ b/renovate.json
@@ -6,5 +6,14 @@
     "local>volker.raschek/renovate-config:actions#master",
     "local>volker.raschek/renovate-config:golang#master",
     "local>volker.raschek/renovate-config:regexp#master"
+  ],
+  "packageRules": [
+    {
+      "automerge": false,
+      "enable": false,
+      "matchDepNames": [
+        "^github.com/asaskevich/govalidator"
+      ]
+    }
   ]
 }
