chore(renovate): disable 'github.com/asaskevich/govalidator'

--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,7 @@
   "packageRules": [
     {
       "automerge": false,
-      "enable": false,
+      "enabled": false,
       "matchDepNames": [
         "^github.com/asaskevich/govalidator"
       ]
