--- a/renovate.json
+++ b/renovate.json
@@ -9,10 +9,12 @@
   ],
   "packageRules": [
     {
-      "automerge": false,
       "enabled": false,
-      "matchDepNames": [
-        "^github.com/asaskevich/govalidator"
+      "matchDatasources":[
+        "go"
+      ],
+      "matchPackageNames": [
+        "^github\\.com/asaskevich/govalidator"
       ]
     }
   ]
